@@ -3,10 +3,11 @@ package ohio.rizz.streamingservice.service.type.chain.internal.audio;
 import ohio.rizz.streamingservice.service.type.chain.AbstractSuffixTypeGetterHandler;
 
 import java.util.Collections;
+import java.util.List;
 
 public class FlacSuffixTypeGetterHandler extends AbstractSuffixTypeGetterHandler {
     public FlacSuffixTypeGetterHandler() {
-        super(Collections.singletonList("audio/x-flac"));
+        super(List.of("audio/x-flac", "audio/flac"));
     }
 
     @Override
